[package]
name = "json-diff-checker"
version = "0.1.0"
edition = "2021"

[lib]
name = "json_diff_checker"
path = "src/lib.rs"

[[bin]]
name = "json_diff_checker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"

[dev-dependencies]
criterion = "0.5"
